--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -13,16 +13,15 @@
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
-        const messageEl = document.getElementById('response-message');
-        document.getElementById('user-update-form').addEventListener('submit', async (event) => {
+        const messageEl = document.getElementById("response-message");
+        document.getElementById("user-update-form").addEventListener("submit", async (event) => {
             event.preventDefault();
             const formData = new FormData(event.target);
             const data = Object.fromEntries(formData.entries());
-            console.log(data);
-            const response = await fetch('/user', {
-                method: 'PATCH',
+            const response = await fetch("/user", {
+                method: "PATCH",
                 headers: {
-                    'Content-Type': 'application/json',
+                    "Content-Type": "application/json",
                 },
                 body: JSON.stringify(data),
             });
@@ -30,19 +29,19 @@
                 const result = await response.json();
                 messageEl.textContent = result.message;
             } else {
-                messageEl.textContent = 'Failed to update user';
+                messageEl.textContent = "Failed to update user";
             }
         });
 
-        document.getElementById('delete-user-btn').addEventListener('click', async () => {
+        document.getElementById("delete-user-btn").addEventListener("click", async () => {
             const response = await fetch(`/user`, {
-                method: 'DELETE',
+                method: "DELETE",
             });
             if (response.ok) {
                 const result = await response.json();
                 messageEl.textContent = result.message;
             } else {
-                messageEl.textContent = 'Failed to delete user';
+                messageEl.textContent = "Failed to delete user";
             }
         });
     </script>
