--- a/test/http/views/partials/navbar.hbs
+++ b/test/http/views/partials/navbar.hbs
@@ -13,4 +13,4 @@
         </li>
     </ul>
 </nav>
-<p class="{{ status }}">{{ message }}</p>
+<p id="response-message" class="message-{{ status }}">{{ message }}</p>
