Bug fix: User Update, Password Update (#32)
* update user fixed
* show message on user create err and success
* user update test added
* update password capability
* disallow update with no changes
* add logout button
* logout message

--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -11,6 +11,7 @@
             <span> | </span>
             <a href="/user/create">Create Account</a>
         </li>
+        <li><a href="/auth/logout">Logout</a></li>
     </ul>
 </nav>
-<p class="{{ status }}">{{ message }}</p>
+<p id="response-message" class="message-{{ status }}">{{ message }}</p>
