--- a/test/http/views/user.hbs
+++ b/test/http/views/user.hbs
@@ -1,52 +1,74 @@
 <div id="user-settings-container">
-    <h3 id="page-title">User Settings</h3>
+    <h2 id="page-title">User Settings</h2>
 
+    <h3>Edit Profile</h3>
     <form id="user-update-form">
         <label for="user-name">User Name</label>
         <input id="user-name" type="text" name="name" value="{{ user.name }}" />
         <label for="user-email">Email</label>
         <input id="user-email" type="email" name="email" value="{{ user.email }}" />
-        <label for="user-password">Password</label>
-        <input id="user-password" type="password" name="password">
-{{!-- TODO: probably shouldn't pass the user id this way, but extract from request/resposne  --}}
-        <input id="user-id" type="hidden" name="id" value="{{ user.id }}" />
         <button id="update-user-btn" type="submit">Submit</button>
+    </form>
+
+    <h3>Change Password</h3>
+    <form id="password-update-form">
+        <label for="new-password">New Password</label>
+        <input id="new-password" type="password" name="password" />
+        <button id="update-password-btn" type="submit">Update Password</button>
     </form>
 
     <h3>Delete User Account</h3>
     <button id="delete-user-btn" type="submit">Delete User</button>
 
     <script>
-        const messageEl = document.getElementById('response-message');
-        // TODO: make generic and move out for all templates to use
-        // UPDATE
-        document.getElementById('user-update-form').addEventListener('submit', async (event) => {
+        const messageEl = document.getElementById("response-message");
+        document.getElementById("user-update-form").addEventListener("submit", async (event) => {
             event.preventDefault();
             const formData = new FormData(event.target);
             const data = Object.fromEntries(formData.entries());
-            data.id = parseInt(data.id, 10);
-            console.log(`data.id = ${data.id}`);
-            const response = await fetch('/user', {
-                method: 'PATCH',
+            const response = await fetch("/user", {
+                method: "PATCH",
                 headers: {
-                    'Content-Type': 'application/json',
+                    "Content-Type": "application/json",
                 },
-                body: data,
-            });
-        });
-
-        // DELETE
-        document.getElementById('delete-user-btn').addEventListener('click', async () => {
-            const userId = document.getElementById('user-id').value;
-            const response = await fetch(`/user/${userId}`, {
-                method: 'DELETE',
+                body: JSON.stringify(data),
             });
             if (response.ok) {
                 const result = await response.json();
                 messageEl.textContent = result.message;
             } else {
-                // TODO: can we use the result message?
-                messageEl.textContent = 'Failed to delete user';
+                messageEl.textContent = "Failed to update user";
+            }
+        });
+
+        document.getElementById("password-update-form").addEventListener("submit", async (event) => {
+            event.preventDefault();
+            const formData = new FormData(event.target);
+            const data = Object.fromEntries(formData.entries());
+            const response = await fetch("/user/password", {
+                method: "PATCH",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(data),
+            });
+            if (response.ok) {
+                const result = await response.json();
+                messageEl.textContent = result.message;
+            } else {
+                messageEl.textContent = "Failed to update password";
+            }
+        });
+
+        document.getElementById("delete-user-btn").addEventListener("click", async () => {
+            const response = await fetch(`/user`, {
+                method: "DELETE",
+            });
+            if (response.ok) {
+                const result = await response.json();
+                messageEl.textContent = result.message;
+            } else {
+                messageEl.textContent = "Failed to delete user";
             }
         });
     </script>
