--- a/test/http/views/layouts/main.hbs
+++ b/test/http/views/layouts/main.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css" rel="stylesheet" type="text/css" />
+    <link href="/public/css/tailwind.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
