--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -1,17 +1,62 @@
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/sets">Sets</a></li>
-        <li><a href="/inventory">My Inventory</a></li>
+<nav class="bg-gray-800">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16">
+            <div class="flex items-center">
+                <a href="#" class="text-white text-lg font-bold">I Want My MTG</a>
+            </div>
+            {{!-- Desktop --}}
+            <div class="hidden md:flex space-x-4 items-center">
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium" href="/">Home</a>
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium" href="/sets">Sets</a>
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                    href="/inventory">MyInventory</a>
+                {{!-- TODO: If logged in: --}}
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium" href="/user">My
+                    Account</a>
+                {{!-- TODO: Else/If not logged in --}}
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                    href="/auth/login">Login</a>
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                    href="/user/create">Create Account</a>
+                <a class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
+                    href="/auth/logout">Logout</a>
+            </div>
+            {{!-- Mobile Menu Button--}}
+            <div class="md:hidden flex items-center">
+                <button id="mobile-menu-button"
+                    class="text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h16m-7 6h7" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+    {{!-- Mobile Menu --}}
+    <div id="mobile-menu" class="hidden md:hidden">
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium" href="/">Home</a>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium" href="/sets">Sets</a>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            href="/inventory">MyInventory</a>
         {{!-- TODO: If logged in: --}}
-        <li><a href="/user">My Account</a></li>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium" href="/user">My
+            Account</a>
         {{!-- TODO: Else/If not logged in --}}
-        <li>
-            <a href="/auth/login">Login</a>
-            <span> | </span>
-            <a href="/user/create">Create Account</a>
-        </li>
-        <li><a href="/auth/logout">Logout</a></li>
-    </ul>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            href="/auth/login">Login</a>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            href="/user/create">Create
+            Account</a>
+        <a class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
+            href="/auth/logout">Logout</a>
+    </div>
 </nav>
 <p id="response-message" class="message-{{ status }}">{{ message }}</p>
+<script>
+    document.getElementById('mobile-menu-button').addEventListener('click', () => {
+        const menu = document.getElementById('mobile-menu');
+        menu.classList.toggle('hidden');
+    });
+</script>
