message box fn, styles working

--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -1822,6 +1822,14 @@ select {
   position: relative;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1963,6 +1971,10 @@ select {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-3 {
