--- a/test/http/views/partials/navbar.hbs
+++ b/test/http/views/partials/navbar.hbs
@@ -53,10 +53,23 @@
             href="/auth/logout">Logout</a>
     </div>
 </nav>
-<p id="response-message" class="message-{{ status }}">{{ message }}</p>
+<p id="response-message" class="bg-{{ status }} hidden fixed top-4 right-4 text-white p-4 rounded">
+    {{message}}
+</p>
+
 <script>
-    document.getElementById('mobile-menu-button').addEventListener('click', () => {
-        const menu = document.getElementById('mobile-menu');
-        menu.classList.toggle('hidden');
+    document.addEventListener("DOMContentLoaded", () => {
+        const message = document.getElementById("response-message");
+        console.log(`message: ${message}`);
+        if (message.textContent) {
+            message.classList.remove("hidden");
+            setTimeout(() => {
+                message.classList.add("hidden");
+            }, 3000);
+        }
+    });
+    document.getElementById("mobile-menu-button").addEventListener("click", () => {
+        const menu = document.getElementById("mobile-menu");
+        menu.classList.toggle("hidden");
     });
 </script>
