add warning, info types; user http dto; fix login msg css; fix create user msg; fix status msg default bg

--- a/src/adapters/http/public/css/app.css
+++ b/src/adapters/http/public/css/app.css
@@ -5,3 +5,11 @@
 .bg-error {
     background-color: rgb(252 165 165);
 }
+
+.bg-warning {
+    background-color: rgb(255 255 0);
+}
+
+.bg-info {
+    background-color: rgb(173 216 230);
+}
