--- a/src/adapters/http/views/partials/navbar.hbs
+++ b/src/adapters/http/views/partials/navbar.hbs
@@ -53,7 +53,8 @@
             href="/auth/logout">Logout</a>
     </div>
 </nav>
-<p id="response-message" class="bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden fixed top-4 right-4 text-white p-4 rounded">
+<p id="response-message"
+    class="bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden fixed top-4 right-4 text-white p-4 rounded">
     {{message}}
 </p>
 
@@ -67,23 +68,24 @@
                 message.classList.add("hidden");
             }, 3000);
         }
-    });
-    const observer = new MutationObserver((mutations) => {
-        mutations.forEach((mutation) => {
-            if (mutation.type === "childList" && mutation.target === message) {
-                if (message.textContent.trim().length > 0) {
-                    message.classList.remove("hidden");
-                    setTimeout(() => {
-                        message.classList.add("hidden");
-                    }, 3000);
+        const observer = new MutationObserver((mutations) => {
+            mutations.forEach((mutation) => {
+                if (mutation.type === "childList" && mutation.target === message) {
+                    if (message.textContent.trim().length > 0) {
+                        message.classList.remove("hidden");
+                        setTimeout(() => {
+                            message.classList.add("hidden");
+                        }, 3000);
+                    }
                 }
-            }
+            });
+        });
+        observer.observe(message, { childList: true });
+
+        document.getElementById("mobile-menu-button").addEventListener("click", () => {
+            const menu = document.getElementById("mobile-menu");
+            menu.classList.toggle("hidden");
         });
     });
 
-    observer.observe(message, { childList: true });
-    document.getElementById("mobile-menu-button").addEventListener("click", () => {
-        const menu = document.getElementById("mobile-menu");
-        menu.classList.toggle("hidden");
-    });
 </script>
