--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -19,58 +19,55 @@
 
     <h3>Delete User Account</h3>
     <button id="delete-user-btn" type="submit">Delete User</button>
-
-    <script>
-        const messageEl = document.getElementById("response-message");
-        document.getElementById("user-update-form").addEventListener("submit", async (event) => {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const data = Object.fromEntries(formData.entries());
-            const response = await fetch("/user", {
-                method: "PATCH",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify(data),
-            });
-            if (response.ok) {
-                const result = await response.json();
-                messageEl.textContent = result.message;
-            } else {
-                messageEl.textContent = "Failed to update user";
-            }
-        });
-
-        document.getElementById("password-update-form").addEventListener("submit", async (event) => {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const data = Object.fromEntries(formData.entries());
-            const response = await fetch("/user/password", {
-                method: "PATCH",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify(data),
-            });
-            if (response.ok) {
-                const result = await response.json();
-                messageEl.textContent = result.message;
-            } else {
-                messageEl.textContent = "Failed to update password";
-            }
-        });
-
-        document.getElementById("delete-user-btn").addEventListener("click", async () => {
-            const response = await fetch(`/user`, {
-                method: "DELETE",
-            });
-            if (response.ok) {
-                const result = await response.json();
-                messageEl.textContent = result.message;
-            } else {
-                messageEl.textContent = "Failed to delete user";
-            }
-        });
-    </script>
-
 </div>
+<script>
+    async function updateMessage(response, messageEl, method) {
+        messageEl.classList.remove("bg-info", "bg-success", "bg-error");
+        if (response.ok) {
+            const result = await response.json();
+            messageEl.textContent = result.message;
+            console.log(`From user.hbs: ${result.status}`);
+            messageEl.classList.add(`bg-${result.status}`);
+        } else {
+            messageEl.textContent = `Failed to ${method} user`;
+            messageEl.classList.add("bg-error");
+        }
+    }
+
+    const messageEl = document.getElementById("response-message");
+
+    document.getElementById("user-update-form").addEventListener("submit", async (event) => {
+        event.preventDefault();
+        const formData = new FormData(event.target);
+        const data = Object.fromEntries(formData.entries());
+        const response = await fetch("/user", {
+            method: "PATCH",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+        });
+        updateMessage(response, messageEl, "update");
+    });
+
+    document.getElementById("password-update-form").addEventListener("submit", async (event) => {
+        event.preventDefault();
+        const formData = new FormData(event.target);
+        const data = Object.fromEntries(formData.entries());
+        const response = await fetch("/user/password", {
+            method: "PATCH",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+        });
+        updateMessage(response, messageEl, "update");
+    });
+
+    document.getElementById("delete-user-btn").addEventListener("click", async () => {
+        const response = await fetch(`/user`, {
+            method: "DELETE",
+        });
+        updateMessage(response, messageEl, "delete");
+    });
+</script>
