HTTP Styles with Tailwind CSS (#34)
* tailwind added
* navbar styles
* inventory input style
* message box fn, styles working
* add warning, info types
* user http dto
* fix login msg css 
* fix create user msg
* fix status msg default bg
* default bg for status msg
* update user success working,
* update user pwd works once on success,
* delete user no bg
* user response messages bg working

--- a/src/adapters/http/views/layouts/main.hbs
+++ b/src/adapters/http/views/layouts/main.hbs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css" rel="stylesheet" type="text/css" />
+    <link href="/public/css/tailwind.css" rel="stylesheet" type="text/css" />
+    <link href="/public/css/app.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
     <header>
         {{>navbar}}
@@ -17,4 +21,5 @@
         {{>footer}}
     </footer>
 </body>
+
 </html>
