--- a/test/http/views/layouts/main.hbs
+++ b/test/http/views/layouts/main.hbs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link href="//cdn.jsdelivr.net/npm/keyrune@latest/css/keyrune.css" rel="stylesheet" type="text/css" />
+    <link href="/public/css/tailwind.css" rel="stylesheet" type="text/css" />
+    <link href="/public/css/app.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
     <header>
         {{>navbar}}
@@ -17,4 +21,5 @@
         {{>footer}}
     </footer>
 </body>
+
 </html>
