expmt with jazz style colors

--- a/src/adapters/http/views/layouts/main.hbs
+++ b/src/adapters/http/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <link href="/public/css/app.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body class="bg-white items-center justify-center min-h-screen">
     <header>
         {{>navbar}}
     </header>
