--- a/test/http/views/login.hbs
+++ b/test/http/views/login.hbs
@@ -6,6 +6,6 @@
         <input id="user-email" type="email" name="email" />
         <label for="user-password">Password</label>
         <input id="user-password" type="password" name="password" />
-        <button id="login-btn" type="submit">Login</button>
+        <button id="login-btn" class="btn btn-primary" type="submit">Login</button>
     </form>
 </div>
