--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+    @apply text-base font-medium rounded-lg p-3;
+}
+
+.btn-primary {
+    @apply w-full bg-teal-500 text-white font-semibold py-3 rounded-lg shadow-md hover:bg-teal-600 focus:ring-4 focus:ring-teal-300;
+}
+
+.btn-secondary {
+    @apply bg-slate-100 text-slate-900;
+}
+
+.btn-tertiary {
+    @apply bg-slate-200 text-slate-900;
+}
+
+.input-field {
+    @apply mt-1 w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:outline-none
+}
+
+.input-label {
+    @apply block font-medium text-teal-500;
+}
+
+.link {
+    @apply text-purple-600 hover:underline;
+}
+
+.login-container {
+    @apply bg-teal-100 shadow-lg rounded-lg p-8 max-w-md w-full
+}
+
+.navbar-link {
+    @apply text-white hover:text-teal-100 px-3 py-2 rounded-md text-sm font-medium
+}
+
+.navbar-link-mobile {
+    @apply text-white hover:text-teal-100 block px-3 py-2 rounded-md text-base font-medium
+}
+
+.page-title {
+    @apply text-2xl font-bold text-center text-teal-500;
+}
+
+.page-subtitle {
+    @apply text-sm text-center mt-2 text-purple-600;
+}
