--- a/src/adapters/http/views/login.hbs
+++ b/src/adapters/http/views/login.hbs
@@ -11,10 +11,10 @@
             <label class="input-label" for="user-password">Password</label>
             <input id="user-password" class="input-field" type="password" name="password" />
         </div>
-        <button id="login-btn" class="btn-primary" type="submit">Login</button>
+        <button id="login-btn" class="btn btn-primary" type="submit">Login</button>
     </form>
     <div class="mt-4 text-center">
-        <a href="#" class="text-purple-600 hover:underline">
+        <a href="#" class="link">
             Forgot your password?
         </a>
     </div>
