--- a/src/adapters/http/views/user.hbs
+++ b/src/adapters/http/views/user.hbs
@@ -1,24 +1,36 @@
-<div id="user-settings-container">
-    <h2 id="page-title">User Settings</h2>
+<div class="settings-container">
+    <h2 class="page-title">User Settings</h2>
 
-    <h3>Edit Profile</h3>
-    <form id="user-update-form">
-        <label for="user-name">User Name</label>
-        <input id="user-name" type="text" name="name" value="{{ user.name }}" />
-        <label for="user-email">Email</label>
-        <input id="user-email" type="email" name="email" value="{{ user.email }}" />
-        <button id="update-user-btn" type="submit">Submit</button>
-    </form>
-
-    <h3>Change Password</h3>
-    <form id="password-update-form">
-        <label for="new-password">New Password</label>
-        <input id="new-password" type="password" name="password" />
-        <button id="update-password-btn" type="submit">Update Password</button>
-    </form>
-
-    <h3>Delete User Account</h3>
-    <button id="delete-user-btn" type="submit">Delete User</button>
+    <div class="section-container">
+        <h3 class="page-subtitle">Edit Profile</h3>
+        <form id="user-update-form" class="mt-6">
+            <div class="mb-4">
+                <label class="input-label" for="user-name">User Name</label>
+                <input id="user-name" class="input-field" type="text" name="name" value="{{ user.name }}" />
+            </div>
+            <div class="mb-4">
+                <label class="input-label" for="user-email">Email</label>
+                <input id="user-email" class="input-field" type="email" name="email" value="{{ user.email }}" />
+            </div>
+            <button id="update-user-btn" class="btn btn-primary" type="submit">Submit</button>
+        </form>
+    </div>
+    <hr class="my-6 border-t border-teal-200">
+    <div class="section-container">
+        <h3 class="page-subtitle">Change Password</h3>
+        <form id="password-update-form" class="mt-6">
+            <div class="mb-4">
+                <label class="input-label" for="new-password">New Password</label>
+                <input id="new-password" class="input-field" type="password" name="password" />
+            </div>
+            <button id="update-password-btn" class="btn btn-secondary" type="submit">Update Password</button>
+        </form>
+    </div>
+    <hr class="my-6 border-t border-teal-200">
+    <div class="section-container">
+        <h3 class="page-subtitle">Delete User Account</h3>
+        <button id="delete-user-btn" class="btn btn-tertiary" type="submit">Delete User</button>
+    </div>
 </div>
 <script>
     async function updateMessage(response, messageEl, method) {
