--- a/src/adapters/http/views/layouts/main.hbs
+++ b/src/adapters/http/views/layouts/main.hbs
@@ -13,6 +13,7 @@
 <body class="bg-white items-center justify-center min-h-screen">
     <header>
         {{>navbar}}
+        {{>breadcrumbs}}
     </header>
     <div>
         {{{body}}}
