--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -2108,6 +2108,16 @@ select {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.breadcrumb-item {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.breadcrumb-layout {
+  display: flex;
+  align-items: center;
+}
+
 .btn {
   border-radius: 0.5rem;
   padding-top: 0.5rem;
