--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.breadcrumb-item {
+    @apply text-sm;
+}
+
+.breadcrumb-layout {
+    @apply flex items-center;
+}
+
 .btn {
     @apply py-2 px-4 rounded-lg shadow-md;
 }
