--- a/src/adapters/http/styles/tailwind.css
+++ b/src/adapters/http/styles/tailwind.css
@@ -27,6 +27,10 @@
     @apply bg-blue-500 text-white hover:bg-blue-600 focus:ring-4 focus:ring-blue-300;
 }
 
+.create-user-container {
+    @apply bg-teal-100 shadow-lg rounded-lg p-8 max-w-3xl w-full mx-auto mt-10;
+}
+
 .input-field {
     @apply mt-1 w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:outline-none;
 }
