--- a/src/adapters/http/views/login.hbs
+++ b/src/adapters/http/views/login.hbs
@@ -5,11 +5,11 @@
     <form id="login-form" class="mt-6" method="post">
         <div class="mb-4">
             <label class="input-label" for="user-email">Email</label>
-            <input id="user-email" class="input-field" type="email" name="email" />
+            <input id="user-email" class="input-field" type="email" name="email" required/>
         </div>
         <div class="mb-6">
             <label class="input-label" for="user-password">Password</label>
-            <input id="user-password" class="input-field" type="password" name="password" />
+            <input id="user-password" class="input-field" type="password" name="password" required />
         </div>
         <button id="login-btn" class="btn btn-primary" type="submit">Login</button>
     </form>
