--- a/test/http/views/user.hbs
+++ b/test/http/views/user.hbs
@@ -20,7 +20,7 @@
         <form id="password-update-form" class="mt-6">
             <div class="mb-4">
                 <label class="input-label" for="new-password">New Password</label>
-                <input id="new-password" class="input-field" type="password" name="password" />
+                <input id="new-password" class="input-field" type="password" name="password" required/>
             </div>
             <button id="update-password-btn" class="btn btn-secondary" type="submit">Update Password</button>
         </form>
